# SDL_CMakeCXXTemplate

./: CMakeLists.txt  CMakeSettings.json  main.cpp
